# UnseenUniversity

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  BRAINSTORM.md  CLAUDE.md  EXPERTS.md  README.md  SESSION_2026-05-22.md  conftest.py  dsimnel  for_cc_windows.md  granny  igor  igor.ps1  pyproject.toml  run_test.py  sudo_relay  superclaude  superclaude.ps1  test_inference.py  test_inference_ticket.py  thelibrarian  ticket_infra_test_done.txt  uu
.claude/: slate.md
agent_datacenter/: action_log.py  db.py  device.py
agent_datacenter/announce/: broker.py  channels.py  listener.py  manifest.py  profile.py
agent_datacenter/cli/: agentctl.py
agent_datacenter/skeleton/: skeleton.py
bus/: connection.py  envelope.py  imap_server.py  memory_protocol.py  pg_bus.py
config/: cc_env.sh  device_config.py  dovecot.conf.template  granny.yaml  librarian.yaml  uu.cfg.template
config/factories/: example-factory.yaml
config/ground_loop/: scraps.yaml  web_server.yaml
config/ground_loop_staging/: build_digester.yaml  cc_worker.yaml
config/policies/: cc.yaml  igor.yaml
config/profiles/: base.yaml  cc.yaml  google_secretary.yaml  granny.yaml  igor.yaml  research-orca.yaml  vetinari.yaml
devices/akien/: __init__.py  shim.py
devices/archivist/: contrib.py  device.py  learning_pipeline.py  proxy.py  shim.py
devices/auditor/: device.py  mcp_server.py  shim.py
devices/browser_use/: device.py  shim.py
devices/build_digester/: digest_store.py  log_parser.py
devices/calibre/: device.py  shim.py
devices/classifier/: annotator.py  cli.py  device.py  report.py  (+1 more)
diagnostic_base/: base.py  logging_bridge.py
docs/: 20260710.Akien.CC0.WorkflowLevels.md  Deterministic_AI_Development_Levers_A_layer_on_top_of_skills.md  GlobalKB.md  TheoryOfOperation.md  compiled-inference-the-residue.md  crash_safe_sessions.md  design_audit_2026-06-17.md  design_patterns_inventory.md  dicksimnel_parity.md  framework_overview.md  getting_started.md  html_spec_template.html  memory_architecture.md  palace_schema.md  rewind_output_contracts.md  security_known_limitations.md  skills_harmony_recommendation_20260622.md  skills_intention_review_20260623.md  state_inventory.md
scripts/: critic.py  palace_bootstrap.py  palace_cli.py  palace_seed_decisions.py  search_index_bootstrap.py  session_capture.py  unified_node_adc_migration.py
skeleton/: halt_registry.py  registry.py
skills/: manifest.json  workflow.md
systemd/: ground_loop.service  ground_loop.user.service
test_env/: pyvenv.cfg
tests/: conftest.py  test_action_claim_verifier.py  test_action_log.py  test_activate.py  test_adc_shim.py  test_after_action_reviewer.py  test_agent_kill_switch.py  test_agentctl_init.py  test_alarm_callsites.py  test_annotator.py  test_annotator_delta.py  test_announce_client_integration.py  test_announce_integration.py  test_announce_listener.py  test_announce_mcp_adapter.py  test_announce_provenance.py  test_announce_round_trip.py  test_anticipation.py  test_approach_frame_audit.py  test_architecture_intention_points.py  test_audit_check_author_model_tag.py  test_audit_expert_load.py  test_audit_telemetry.py  test_baseshim_health_circuit.py  test_bg_score_debug.py  test_bliss_integrator.py  test_book_learner_completion.py  test_book_learner_report.py  test_boredom_foreman.py  test_budget_gate.py  test_budget_ledger.py  test_budget_postgres.py  test_build_log_digester.py  test_build_packet.py  test_builder_close_mixin.py  test_builder_memory_residency.py  test_builder_merge_proof.py  test_bus.py  test_calibre_shim.py  test_callmap.py  (+373 more)
unseen_university/: __init__.py  _uu_root.py  action_log.py  channel.py  db_proxy.py  design_store.py  device.py  gate_logic.py  global_kb.py  identity.py  intention_store.py  memory_root.py  notification_dispatcher.py  notify.py  prompt_builder.py  proof_store.py  rack.py  shim.py  slate_store.py  system_alarm_notifier.py  system_alarms.py  ticket_status.py  ticket_store.py
(+5673 files in other folders)
