[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "unseen_university"
version = "0.1.0"
description = "Runtime substrate for agent deployments — skeleton, IMAP bus, device/shim contracts"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "loguru>=0.7",
    "mcp>=1.0",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9",
    "discord.py>=2.3",
    "aiohttp>=3.8",
    "uvicorn>=0.20",
    "starlette>=0.25",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "ollama>=0.3",
    "rich>=13.0",
    "jinja2>=3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["unseen_university*", "bus*", "diagnostic_base*", "skeleton*", "devices*", "config*", "lab*"]

[tool.pytest.ini_options]
pythonpath = [".", "tests", "lab"]
addopts = "--import-mode=importlib"
markers = [
    "docker: tests that require Docker installed and running (deselect with -m 'not docker')",
]

[project.scripts]
agentctl = "unseen_university.rack:main"
