[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "unseen_university"
version = "0.1.0"
description = "Runtime substrate for agent deployments — skeleton, IMAP bus, device/shim contracts"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "loguru>=0.7",
    "mcp>=1.0",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9",
    "discord.py>=2.3",
    "aiohttp>=3.8",
    "uvicorn>=0.20",
    "starlette>=0.25",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "ollama>=0.3",
    "rich>=13.0",
    "jinja2>=3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["unseen_university*"]

[tool.setuptools.package-data]
# Shipped read-only assets that live inside the package (configs, templates, schemas).
# Editable installs read these from the source tree; this block makes wheel builds carry them.
"*" = ["*.yaml", "*.yml", "*.cfg", "*.template", "*.json", "*.txt", "*.sh", "*.md", "Dockerfile*"]

[tool.pytest.ini_options]
pythonpath = [".", "tests", "devlab"]
# `live` is deselected BY DEFAULT. Driving a real shared inference host is something you must ASK
# for (`-m live`) — never something a bare `pytest tests/` does behind your back. It used to: the
# marker was registered and deselected nowhere, so every run (day-close, overnight) fired a live 24B
# multi-turn build at Hex. The runs took hours under contention, never exited, never released their
# sockets, and piled up nine deep — which then read as "the server is broken."
# T-default-suite-drives-live-inference-and-saturates-hex.
addopts = "--import-mode=importlib -m 'not live'"
markers = [
    "docker: tests that require Docker installed and running (deselect with -m 'not docker')",
    "integration: tests that require live external services (deselect with -m 'not integration')",
    "live: drives real inference against a live host (e.g. Hex). DESELECTED BY DEFAULT — opt in with -m live",
]

[project.scripts]
agentctl = "unseen_university.rack:main"
